# aseprite

./: .gitmodules
src/app/ui/: color_selector.cpp
src/desktop/linux/: CMakeLists.txt
